# swaggerDesign.json
@@ -5,7 +5,7 @@
     "description": "Journal API",
     "version": "1.0.0"
   },
-  "host": "teamfinal-kbcd.onrender.com",
+  "host": "localhost:8080",
   "basePath": "/",
   "schemes": [
     "http",
@@ -14,7 +14,7 @@
   "securityDefinitions": {
     "Google Oauth": {
       "type": "oauth2",
-      "authorizationUrl": "https://teamfinal-kbcd.onrender.com",
+      "authorizationUrl": "http://localhost:8080",
       "flow": "authorizationCode"
     }
   },
@@ -626,6 +626,30 @@
         }
       }
     },
+    "/users/search/{name}": {
+      "get": {
+        "description": "find user by name",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/users/{id}": {
       "get": {
         "description": "find user by id",
@@ -738,4 +762,4 @@
       }
     }
   }
-}
+  }
